# arcen-rs

./: Cargo.toml  README.md  build.rs
docs/: _config.yml  index.md
docs/pages/: examples.md  grammar.md  questions.md
src/: lib.rs  main.rs  parser.rs  prelude.rs  types.rs
src/bundle/: macos.rs  mod.rs
src/component/: mod.rs
src/renderer/: mod.rs  node.rs
src/renderer/rgpu/: mod.rs
src/renderer/wgpu/: mod.rs
src/rx/: expr.rs  mod.rs  parser.rs  token.rs
templates/default/: README.md
templates/default/src/: main.rei
templates/default/src/components/: mod.rei
templates/default/src/pages/: about.rei  mod.rei
