[package]
name = "arcen"
version = "0.1.0"
edition = "2021"
authors = ["Jason Qin"]
description = "A native GUI framework for Neutron Arc, based on Yew"
license-file = "LICENSE"

[profile.release.build-override]
opt-level = 3
codegen-units = 16

[profile.dev.build-override]
opt-level = 3

[dependencies]
env_logger = "0.9"
log = "0.4"
wgpu = { version = "0.13", optional = true }
half = "2.1.0"
derive-new = "0.5.9"
wgpu-types = "0.13.2"
logos = "0.12.1"
macro_rules_attribute = "0.1.2"
derive_more = "0.99"
epaint = "0.19.0"
nix = "0.25"
structopt = "0.3.20"
cfg-if = "1.0.0"
spirv-std = {git = "https://github.com/EmbarkStudios/rust-gpu", features = ["glam"]}
bytemuck = { version = "1.6.3", features = ["derive"] }
clap = { version = "3", features = ["derive"] }

[features]
default = ["rgpu"]
wgpu = ["dep:wgpu"]
rgpu = []
